src/main/java/com/example/DiplomaSite/error/ReviewNotFoundException.java
package com.example.DiplomaSite.error;

public class ReviewNotFoundException extends RuntimeException{
    public ReviewNotFoundException(String message) {
        super(message);
    }
}
